--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
-		"mediawiki/minus-x": "0.3.1"
+		"mediawiki/minus-x": "0.3.1",
+		"mpdf/mpdf": "^8.0"
 	},
 	"scripts": {
 		"test": [
